<resources>
    <string name="app_name">Poker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string translatable="true" name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valor">"Valor: "</string>
    <string name="km_de_voce">" Km de você"</string>
    <string name="mi_de_voce">" Mi de você"</string>
    <string name="title">Título</string>
    <string name="contratos">Contratos</string>
    <string name="o_que_voc_procura">O que você procura?</string>
    <string name="todos">Todos</string>
    <string name="pendentes">Pendentes</string>
    <string name="vigentes">Vigentes</string>
    <string name="finalizados">Finalizados</string>
    <string name="por_favor_insira_todos_os_digitos">Por favor, insira todos os dígitos.</string>
    <string name="recuperar_senha">RECUPERAR SENHA</string>
    <string name="insira_o_codigo">Insira o código</string>
    <string name="para_cadastrar_sua_nova_senha_insira_o_token_que_voc_recebeu_por_e_mail">Para cadastrar sua nova senha, insira o token que você recebeu por e-mail:</string>
    <string name="confirmar">confirmar</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="digite_seu_e_mail_para_que_possamos_enviar_um_c_digo_de_verifica_o">Digite seu e-mail para que possamos enviar um código de verificação:</string>
    <string name="e_mail">E-mail</string>
    <string name="continuar">continuar</string>
    <string name="nova_senha">Nova senha</string>
    <string name="cadastre_a_sua_nova_senha_usando_n_meros_e_caracteres">Cadastre a sua nova senha usando números e caracteres:</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="seja_bem_vindo_a">Seja bem vindo(a)!</string>
    <string name="player_level">Player level</string>
    <string name="time_left_contract">Tempo restante do contrato</string>
    <string name="your_tournaments">Seus torneios</string>
    <string name="current_contract_profit">Lucro do contrato atual</string>
    <string name="ranking">Ranking</string>
    <string name="torneios_aplicados">Torneios aplicados</string>
    <string name="ver_mais">Ver mais</string>
    <string name="pr_ximos_torneios">Próximos torneios</string>
    <string name="ainda_n_o_tem_cadastro_clique_aqui">Ainda não tem cadastro?  \n Clique aqui!</string>
    <string name="campo_obrigat_rio">Campo obrigatório</string>
    <string name="e_mail_inv_lido">E-mail inválido</string>
    <string name="entrar">Entrar</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="por_favor_insira_todos_os_d_gitos">Por favor, insira todos os dígitos.</string>
    <string name="autentica_o_dois_fatores">Autenticação dois fatores</string>
    <string name="insira_o_c_digo_para_realizar_o_login">Insira o código para realizar o login</string>
    <string name="para_realizar_o_login_insira_o_token_que_voc_recebeu_por_e_mail">Para realizar o login, insira o token que você recebeu por e-mail:</string>
    <string name="sobre">Sobre</string>
    <string name="dicas_de_seguran_a">Dicas de segurança</string>
    <string name="contato">Contato</string>
    <string name="pol_tica_de_privacidade"><u>Política de Privacidade</u></string>
    <string name="pol_tica_de_privacidade_normal">Política de Privacidade</string>
    <string name="diamante">Diamante</string>
    <string name="current_contract_info">Informações do contrato atual</string>
    <string name="overall_info">Informações gerais</string>
    <string name="overall_profit">Lucro geral</string>
    <string name="overall_ranking">Ranking geral</string>
    <string name="central_de_ajuda">Central de ajuda</string>
    <string name="termos_de_uso"><u>Termos de Uso</u></string>
    <string name="termos_de_uso_normal">Termos de Uso</string>
    <string name="sair">Sair</string>
    <string name="cadastro">CADASTRO</string>
    <string name="confirma_o_via_e_mail">Confirmação via e-mail</string>
    <string name="para_confirmar_se_seu_e_mail_v_lido_insira_o_c_digo_que_voc_recebeu_na_usa_caixa_de_entrada">Para confirmar se seu e-mail é válido, insira o código que você recebeu na usa caixa de entrada:</string>
    <string name="dados">Dados</string>
    <string name="coloque_seu_n_mero_de_celular_e_seu_e_mail_para_realizar_seu_cadastro">Coloque seu número de celular e seu e-mail para realizar seu cadastro</string>
    <string name="seu_cadastro_foi_finalizado_com_sucesso">Seu cadastro foi finalizado com sucesso</string>
    <string name="aguarde_a_confirma_o_da_nossa_equipe">Aguarde a confirmação da nossa equipe</string>
    <string name="senha">Senha</string>
    <string name="declaro_que_concordo_e_aceito_os">"Declaro que concordo e aceito os \n"</string>
    <string name="e">" e "</string>
    <string name="coloque_suas_informa_es_para_que_possamos_realizar_seu_cadastro">Coloque suas informações para que possamos realizar seu cadastro</string>
    <string name="sua_foto">sua foto</string>
    <string name="nome">Nome</string>
    <string name="informe_seu_nome">Informe seu nome</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="sexo">Sexo</string>
    <string name="homem">Homem</string>
    <string name="pa_s">País</string>
    <string name="brasil">Brasil</string>
    <string name="estado">Estado</string>
    <string name="s_o_paulo">SP</string>
    <string name="cidade">Cidade</string>
    <string name="neighborhood">Bairro</string>
    <string name="street">Rua</string>
    <string name="number">Numero</string>
    <string name="zipcode">Cep</string>
    <string name="time">Hora de Inicio</string>
    <string name="description_torneio">Descrição</string>
    <string name="date_start">Data de inicio</string>
    <string name="date_finish">Data de encerramento</string>
    <string name="validados">Validados</string>
    <string name="atualiza_o_do_torneio">ATUALIZAÇÃO DO TORNEIO</string>
    <string name="titulo">Titulo</string>
    <string name="titulo_finish">Pontuação no torneio</string>
    <string name="informe_o_titulo">Informe o titulo</string>
    <string name="informe_o_rank">Classificação no torneio</string>
    <string name="mensagem">Mensagem</string>
    <string name="escreva_sua_mensagem">Escreva sua mensagem</string>
    <string name="torneio">TORNEIO</string>
    <string name="torneio_poker">Torneio Poker</string>
    <string name="premia_o">Premiação</string>
    <string name="regras_para_jogar">Regras para Jogar</string>
    <string name="data_do_evento">Data do evento</string>
    <string name="endere_o">Endereço</string>
    <string name="voc_est_a_40km_de_dist_ncia_do_torneio">Você está a 40km de distância do torneio</string>
    <string name="increver_se">Increver-se</string>
    <string name="link_oficial_do_torneio">Link oficial do torneio</string>
    <string name="descri_o">Descrição</string>
    <string name="inscri_o">INSCRIÇÂO</string>
    <string name="sua_inscri_o_foi_realizada_com_sucesso">Sua inscrição foi realizada com sucesso</string>
    <string name="sua_solicita_o_de_participa_o_foi_enviada_aos_nossos_administradores_o_mais_breve_poss_vel_voc_receber_a_confirma_o_para_participar_do_torneio">Sua solicitação de participação foi enviada aos nossos administradores, o mais breve possível você receberá a confirmação para participar do torneio.</string>
    <string name="fique_atento_as_suas_notifica_es">Fique atento as suas notificações!</string>
    <string name="retornar_para_a_home">Retornar para a home</string>
    <string name="nome_do_torneio">Nome do torneio</string>
    <string name="informe_o_nome_do_torneio">Informe o nome do torneio</string>
    <string name="link_do_torneio">Link do torneio</string>
    <string name="informe_o_link_do_torneio">Informe o link do torneio</string>
    <string name="seu_torneio">Seu torneio</string>
    <string name="perfil">Perfil</string>
    <string name="campos_necessarios">Necessário preencher todos os campos</string>
    <string name="data_invalida">Data inválida</string>
    <string name="necessario_termos">Necessário aceitar os termos</string>
    <string name="erro_generico">Erro genérico</string>
    <string name="phone_invalido">Número de telefone inválido</string>
    <string name="code_invalido">Por favor, insira todos os digitos</string>
    <string name="senha_8digitos">A senha precisa ter no mínimo 8 dígitos</string>
    <string name="senhas_diferentes">As senhas precisam ser iguais</string>
    <string name="concluir_cadastro">Concluir Cadastro</string>
    <string name="torneio_criado_com_sucesso">Torneio criado com sucesso</string>
    <string name="necessario_adicionar_um_comprovante">Necessário adicionar um comprovante</string>
    <string name="necessario_preencher_todos_os_campos_acima">Necessário preencher todos os campos acima</string>
    <string name="eua">Estados Unidos</string>
    <string name="selecionar_comprovante">Selecionar comprovante</string>
    <string name="camera">Câmera</string>
    <string name="galeria">Galeria</string>
    <string name="cancelar">Cancelar</string>
    <string name="camera_permission">Permissão da câmera</string>
    <string name="camera_permission_required_to_take_pictures">É necessária permissão da câmera para tirar fotos.</string>
    <string name="camera_permission_denied">Permissão da câmera negada</string>
    <string name="_40_km_de_voc">40 km de você</string>
    <string name="zip_code">CEP</string>
    <string name="hint_digit_your_message">Digite sua mensagem</string>
    <string name="login">LOGIN</string>


</resources>